--- a/index.html
+++ b/index.html
@@ -333,9 +333,7 @@
         <hr>
         <br>
         <ul class="footer">
-            <li class="footer">AE8691@student.jamk.fi</li>
-            <li>|</li>
-            <li class="footer"><a class="cv" href="files/CV_Jenny_Jokela_protected.pdf" target="_blank"><i class="fa-solid fa-file" title="CV"></i></a></li>
+            <li class="footer">Zyxenn1@gmail.com</li>
             <li>|</li>
             <li class="footer"><i class="fa-brands fa-linkedin" title="To be added"></i></li>
         </ul>
