--- a/index.html
+++ b/index.html
@@ -52,15 +52,11 @@
             <img src="images/pfp.jpg" alt="Profile image">
         </div>
         <div id="aboutmeR"> <!-- Right side of aboutme section -->
-            I am Jenny Jokela, a twenty-something year old engineering student in Jamk University of Applied Sciences.
-            Though I have yet to finish even my first year of studies, I'd say I've racked up a decent amount of skills, some of which
-            being web development, Python programming and the basics of Linux.
+            I am Jenny Jokela, a twenty-something year old engineering student at Jamk University of Applied Sciences.
+            I have three years of studies behind me and a plethora of skills that I've picked up along the way.
             <br><br>
-            My interests mainly lie in programming and development. Having an adequate understanding
-            of the thing I'm trying to achieve is nice and all, but even without it, I am always
-            determined to research and figure out ways to solve problems one way or another.
-            Creativity is a strong suit of mine, and I particularly enjoy tasks that allow me to utilize
-            my creativity in different ways.
+            My interests mostly lie in programming related tasks, but I've always found myself to be passionate about whichever task
+            I'm performing, be it data analytics or test automation. Learning to use the tools and programs I need has never been an obstacle for me.
         </div>
     </section>
     <section id="timeline">
@@ -268,7 +264,7 @@
     <section id="hobbies">
         <h2>Hobbies</h2>
         <div class="hobbyitem"> <!-- first hobby -->
-            <h2 class="hobby">Knitting/crocheting</h2>
+            <h2 class="hobby">Crafts</h2>
             <img class="hobby" src="images/knit.jpg" alt="Yarn">
             <div class="hobbyR">
                 My hobbies include many kinds of crafts, a few of which being knitting and crocheting.
@@ -276,34 +272,19 @@
                 the ability to create something, particularly something useful, is somewhat satisfying,
                 not to mention how satisfying it is to simply see your own handiwork and notice how
                 much you've improved.<br><br>Following instructions is not particularly difficult for me,
-                but I can't deny sometimes preferring to just wing it most of the time, testing and redoing
+                but I can't deny preferring to just wing it most of the time, testing and redoing
                 projects until they turn out how I want them to.
-            </div>
-        </div>
-        <div class="hobbyalt"> <!-- second hobby -->
-            <h2 class="hobbyalt">Crafts</h2>
-            <img class="craft" src="images/craft.jpg" alt="Crafts">
-            <div class="hobbyR">
-                Aside from knitting and crocheting, I also enjoy all other sorts of crafts, such as
-                sewing or paper crafts. Particularly, I love creating miniatures and small scale
-                versions of everyday things, perhaps due to the convenience of being able to work
-                on them easily in the small space of my room, as well as due to the amount of materials
-                they need. It is certainly a lot cheaper to make a 1/12 scale dress than it is to
-                make a full scale one.
             </div>
         </div>
         <div class="hobbyitem"> <!-- third hobby -->
             <h2 class="hobby">Video games</h2>
             <div class="hobbyB">
                 A lot of my free time is naturally spent on games. I particularly like games that
-                let you build and be creative, such as the games pictured above.
+                let you build and be creative, such as the games pictured below.
                 <br><br>
-                OpenTTD, Stardew Valley and The Sims 4 are just a few of the games I enjoy playing in my
-                free time, but you can perhaps notice some similarities between these titles. Particularly,
-                the ability to utilize one's creativity is present in most of the games I play.
-                I enjoy the freedom of being able to customize my game and decide how I want to play it,
-                as well as how I want it to look. You can see two of the aforementioned titles have quite
-                the simple graphics - I can't deny having a soft spot for more 8-bit style games.
+                One summer I even took it upon myself to learn a bit about game development with the Python-based visual
+                novel engine Renpy. There's something satisfying about seeing something you build yourself come to fruition,
+                and how your skills develop the longer you spend working on something you're passionate about.
             </div>
             <div class="gallery">
                 <img class="game" src="images/openttd.jpg" alt="Screenshot of OpenTTD">
